--- a/src/main/resources/com/example/javafxproject/cadastro-cliente.fxml
+++ b/src/main/resources/com/example/javafxproject/cadastro-cliente.fxml
@@ -2,7 +2,8 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.VBox?>
+<?import java.net.*?>
 
 <VBox alignment="CENTER_LEFT" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
 fx:controller="com.example.javafxproject.CadastroClienteController">
@@ -10,26 +11,34 @@ fx:controller="com.example.javafxproject.CadastroClienteController">
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
 
-    <VBox alignment="CENTER" spacing="20.0">
-        <Label text="Cadastro Cliente" />
-        <Label text="Utilize o formulário abaixo para realizar o cadastro" />
+    <VBox styleClass= "root" alignment="CENTER" spacing="20.0" >
+        <Label styleClass="titulo" text="Cadastro Cliente" />
+        <Label text="Utilize para realizar seu cadastro cliente:" />
     </VBox>
 
     <Label text="Nome" />
-    <TextField fx:id="txfNome" />
+    <TextField fx:id="txfNome"/>
+    
+    <Label text="Sobrenome" />
+    <TextField fx:id="txfSobrenome"/>
 
-    <Label text="E-mail" />
-    <TextField fx:id="txfEmail" />
+    <Label text="CPF" />
+    <TextField fx:id="txfCPF"/>
+
+    <Label text="Email" />
+    <TextField fx:id="txfEmail"/>
 
     <Label text="Telefone" />
-    <TextField fx:id="txfTelefone" />
+    <TextField fx:id="txfTelefone"/>
 
-    <CheckBox text="Quero receber promoções no e-mail" fx:id="ckbPromocao" />
 
-    <VBox alignment="CENTER_RIGHT" spacing="20.0">
-        <Button text="Cadastrar" onAction="#onActionCadastrar" />
+    <VBox alignment="CENTER_RIGHT" spacing="20.0" >
+        <Button styleClass= "botao" text="Cadastrar Cliente" onAction="#onActionCadastrarCliente" />
     </VBox>
 
+    <stylesheets>
+        <URL value="@style.css" />
+    </stylesheets>
+    
 </VBox>
-
 
