--- a/src/main/resources/com/example/javafxproject/registro-carros.fxml
+++ b/src/main/resources/com/example/javafxproject/registro-carros.fxml
@@ -31,5 +31,5 @@ fx:controller="com.example.javafxproject.RegistrarCarrosComprados">
     <TextField fx:id"txfEndereco" />
 
     <VBox alignment="CENTER_RIGHT" spacing="20.0">
-        <Button text="Seguir para o cadastro" onAction="#onActionCadastrar" />
+        <Button text="Seguir para o cadastro" onAction="#onActionCadastrarCarro" />
     </VBox>
